# auto-daily

./: .env.example  .gitignore  .gitleaksignore  AGENTS.md  CLAUDE.md  README.md  calendar_config.yaml.example  flake.nix  lefthook.yml  main.py  plan-archive.md  plan.md  prompt.txt  prompt.txt.example  pyproject.toml  slack_config.yaml.example  summary_prompt.txt  summary_prompt.txt.example
.github/workflows/: ci.yml
scripts/: report.sh  setup-permissions.sh  start.sh
src/auto_daily/: __init__.py  __main__.py  calendar.py  capture.py  capture_pipeline.py  cli.py  config.py  logger.py  monitor.py  ocr.py  ollama.py  permissions.py  processor.py  report.py  scheduler.py  slack_parser.py  speech.py  summarize.py  system.py  window_monitor.py
src/auto_daily/llm/: __init__.py  lm_studio.py  ollama.py  openai.py  protocol.py
src/auto_daily/ocr/: __init__.py  apple_vision.py  filters.py  ollama_vision.py  openai_vision.py  protocol.py
tests/: __init__.py  conftest.py  test_calendar.py  test_capture.py  test_capture_pipeline.py  test_config.py  test_integration.py  test_llm_client.py  test_logger.py  test_main.py  test_ocr.py  test_ollama.py  test_permissions.py  test_processor.py  test_scheduler.py  test_slack_parser.py  test_speech.py  test_summarize.py  test_system.py  test_system_integration.py  test_window_monitor.py
